# htstabilizer

./: .gitignore  MANIFEST.in  README.md  example.py  generate_mub_circuits.py  pyproject.toml  show_circuit_statistics.py
.github/workflows/: publish-python.yml  python-package.yml  run-tests.yml
examples/: compress_preparation_circuit.py  readout_circuit.py  state_tomography.py
src/htcircuits/: circuit_lookup.py  f2_algebra.py  find_local_clifford_layer.py  graph.py  graph_draw.py  ht_stabilizer.py  lc_classes.py  linear_index.py  stabilizer.py
src/htcircuits/data/: stabilizer2-all.txt  stabilizer3-all.txt  stabilizer3-linear.txt  stabilizer4-all.txt  stabilizer4-linear.txt  stabilizer5-T.txt  stabilizer5-all.txt  stabilizer5-cycle.txt  stabilizer5-linear.txt  stabilizer5-star.txt
src/htstabilizer/: binary.py  circuit_lookup.py  connectivity_support.py  f2_algebra.py  find_local_clifford_layer.py  graph.py  graph_draw.py  lc_classes.py  linear_index.py  mub_circuits.py  rotate_stabilizer_into_state.py  stabilizer.py  stabilizer_circuits.py  tomography.py
src/htstabilizer/data/: mub2-all.txt  mub3-all.txt  mub3-linear.txt  mub4-all.txt  mub4-cycle.txt  mub4-linear.txt  mub4-star.txt  mub5-Q.txt  mub5-T.txt  mub5-all.txt  mub5-cycle.txt  mub5-linear.txt  mub5-star.txt  mub6-E.txt  mub6-H.txt  mub6-Q.txt  mub6-all.txt  mub6-ladder.txt  mub6-linear.txt  mub6-star.txt  stabilizer4-cycle.txt  stabilizer4-star.txt  stabilizer5-Q.txt  stabilizer5-T.txt  stabilizer5-star.txt  stabilizer6-E.txt  stabilizer6-H.txt  stabilizer6-Q.txt  stabilizer6-all.txt  stabilizer6-allx.txt  stabilizer6-ladder.txt  stabilizer6-linear.txt  stabilizer6-star.txt
tests/: random_stabilizer.py  test_binary.py  test_circuit_lookup.py  test_connectivity_support.py  test_examples.py  test_f2_algebra.py  test_find_local_clifford_layer.py  test_graph.py  test_htstabilizer.py  test_lc_classes.py  test_linear_index.py  test_rotate_stabilizer_into_state.py  test_stabilizer.py  test_stabilizer_circuits.py  test_tomography.py
